<resources>
    <string name="app_name">Movies</string>
    <string name="poster_of_movie">Постер к фильму</string>
    <string name="most_popularity">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favourite">Добавлено в избраное</string>
    <string name="delete_from_favourite">Удаленно из избраного</string>
    <string name="item_main">Главная</string>
    <string name="item_favourite">Избраное</string>
    <string name="launch_trailer">Запустить трейлер</string>
    <string name="name">Назва:</string>
    <string name="original_name">Title: </string>
    <string name="rating">Rating:</string>
    <string name="date">Date release:</string>
    <string name="overview">Description:</string>
    <string name="menu_1">Popular</string>
    <string name="menu_2">Rating</string>
    <string name="menu_3">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
