<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.example.movies.domain.models.Movie" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.details.DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/imageViewBigPoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/poster_back"
                android:contentDescription="@string/poster_of_movie" />

            <TextView
                android:id="@+id/textViewBigPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_color"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBigPoster" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{movie.title}"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBigPoster" />

            <TextView
                android:id="@+id/textViewLabelOriginalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white_color"
                android:layout_marginStart="10dp"
                android:text="@string/original_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textViewOriginalTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{movie.originalTitle}"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textViewLabelRaiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white_color"
                android:layout_marginStart="10dp"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Double.toString(movie.voteAverage)}"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

            <TextView
                android:id="@+id/textViewLabelReleaseData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white_color"
                android:layout_marginStart="10dp"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewReleaseData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{movie.releaseDate}"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
                app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

            <TextView
                android:id="@+id/textViewLabelDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white_color"
                android:layout_marginStart="10dp"
                android:text="@string/overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReleaseData" />

            <TextView
                android:id="@+id/textViewOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{movie.overview}"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription"
                tools:targetApi="o" />

            <ImageView
                android:id="@+id/imageViewAddToFavourite"
                android:layout_width="@dimen/size_of_start"
                android:layout_height="@dimen/size_of_start"
                android:layout_marginEnd="16dp"
                android:onClick="onClickChangeFavourite"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewBigPoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBigPoster"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewOverview">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>